# farming_game_bevy3d

./: Cargo.toml
blurpy/: Cargo.toml
blurpy/assets/: indie_terrain.glb
blurpy/src/: main.rs
blurpy/src/setup/: mod.rs
blurpy/src/setup/camera_setup/: orbital.rs
blurpy/src/setup/window_setup/: window.rs
blurpy/src/setup/world_setup/: terrain.rs
src/: main.rs
src/config/: camera_config.rs
