[package]
name = "rapier_projects"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_rapier3d = { version = "0.32.0", features = [ "simd-stable", "debug-render-3d", "parallel"] }
bevy_rapier2d = { version = "0.32.0", features = [ "simd-stable", "parallel", "debug-render-2d"] }
bevy-inspector-egui = "0.35.0"
rand = "0.9.2"

